--- a/war/Login.html
+++ b/war/Login.html
@@ -7,19 +7,19 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		
+
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<script type="text/javascript" src="http://www.google.com/jsapi"></script>
-		<script type="text/javascript" language="javascript" src="login/login.nocache.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+		<!-- <script type="text/javascript" language="javascript" src="login/login.nocache.js"></script> -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<link type="text/css" rel="stylesheet" href="Login.css">
 	</head>
 
 
 	<body>
-	
+
 	</body>
-	
+
 </html>
 
 
@@ -32,11 +32,11 @@
   </head>
   <body>
     <form method="post" action="/j_spring_security_check">
-      <label for="j_username">Username:</label> 
+      <label for="j_username">Username:</label>
       <input type="text" name="j_username" />
       <br />
-      <label for="j_password">Password:</label> 
-      <input type="password" name="j_password" /> 
+      <label for="j_password">Password:</label>
+      <input type="password" name="j_password" />
       <br />
       <input type="submit" value="Login" />
     </form>
